Giao diện Blog điện ảnh

--- a/src/resource/views/movie_blog.hbs
+++ b/src/resource/views/movie_blog.hbs
@@ -53,12 +53,12 @@
                     <div class="row">
                         <div class="movie-image">
                             <a href="#">
-                                <img src="https://cdn.galaxycine.vn/media/2023/1/8/450_1673155628245.jpg">
+                                <img src="https://cdn.galaxycine.vn/media/2023/2/21/boc-trung-phuc-sinh-ant-man-and-the-wasp-quantumania-6_1676952634061.jpg">
                             </a>
                         </div>
                         <div class="movie-info">
                             <div class="movie-name">
-                                <a href="#"><h5>Ký Sự Điện Ảnh - Kỳ 21: Phiếm Phim Đầu Năm, "Fun" Cả Năm</h5></a>
+                                <a href="#"><h5>Bóc Trứng Phục Sinh Ant-Man And The Wasp: Quantumania</h5></a>
                             </div>
                             <div class="movie-detail">
                                 <button type="button" class="btn btn-primary movie-button">👍🏻Thích <label id="count-like">0</label></button>
@@ -66,7 +66,7 @@
                             </div>
                             <div class = "movie-description">
                                 <p>
-                                    Nhìn lại bức tranh điện ảnh của cả năm 2022 có gì đáng nhớ!
+                                    Những bộ phim thuộc vũ trụ điện ảnh Marvel luôn “chôn” rất nhiều Trứng Phục Sinh để các fan trung thành khám phá.
                                 </p>
                             </div>
                         </div>
@@ -77,12 +77,12 @@
                     <div class="row">
                         <div class="movie-image">
                             <a href="#">
-                                <img src="https://cdn.galaxycine.vn/media/2023/1/8/450_1673155628245.jpg">
+                                <img src="https://cdn.galaxycine.vn/media/2023/2/14/fast-x--vin-diesel-ru-dan-sieu-anh-hung-dua-xe-6_1676348176123.jpg">
                             </a>
                         </div>
                         <div class="movie-info">
                             <div class="movie-name">
-                                <a href="#"><h5>Ký Sự Điện Ảnh - Kỳ 21: Phiếm Phim Đầu Năm, "Fun" Cả Năm</h5></a>
+                                <a href="#"><h5>Fast X: Vin Diesel Rủ Dàn Siêu Anh Hùng Đua Xe?</h5></a>
                             </div>
                             <div class="movie-detail">
                                 <button type="button" class="btn btn-primary movie-button">👍🏻Thích <label id="count-like">0</label></button>
@@ -90,7 +90,7 @@
                             </div>
                             <div class = "movie-description">
                                 <p>
-                                    Nhìn lại bức tranh điện ảnh của cả năm 2022 có gì đáng nhớ!
+                                    Fast X – phần mở đầu cho “cuộc đua cuối” của đại gia đình Toretto vừa tung ra trailer siêu hấp dẫn vào 10.02 vừa qua.
                                 </p>
                             </div>
                         </div>
