--- a/src/resource/views/buy_ticket.hbs
+++ b/src/resource/views/buy_ticket.hbs
@@ -1,88 +1,46 @@
 <link rel="stylesheet" href="/css/buy_ticket.css">
-
 <div class="container text-center">
     <div class="row mt-2">
         <div class="col-md-2"></div>
 
         <div class="col-lg-4 mb-2 p-0">
             <div class="tablist">CHỌN PHIM</div>
-            <div class="border">
-                <a href="#">
-                    <div class="showtimes-row">
-                        <div class="p-2">
-                            <img src="https://cdn.galaxycine.vn/media/2023/3/9/demon-slayer-4_1678344779186.jpg"
-                                class="mt-3">
-                            <i class="icon-c13 mt-3 ms-2"></i>
-                            <div class="title-movie mt-3">
-                                <p class="">Demon Slayer: To The Swordsmith Village</p>
-                                <p class="vn">Thanh Gươm Diệt Quỷ: Đường Đến Làng Rèn Gươm</p>
+            {{#each films}}
+                <div class="border" {{{checkChoosenBackground maphim ../choose}}}>
+                    <a href="/mua-ve/{{maphim}}">
+                        <div class="showtimes-row">
+                            <div class="p-2">
+                                <img style="height: 50px;" src="/img/{{poster}}" class="mt-3">
+                                <i class="icon-c mt-3 ms-2">C{{dotuoi}}</i>
+                                <div class="title-movie mt-3">
+                                        <p {{{checkChoosenTextMain maphim ../choose}}} class="">{{tenphim}}</p>
+                                        <p {{{checkChoosenTextSub maphim ../choose}}} class="vn">{{tenphim}}</p>
+                                    
+                                    {{!-- {{#if tenphimvn}}
+                                        <p class="vn">{{tenphimvn}}</p>
+                                    {{/if}} --}}
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-            <div class="border">
-                <a href="#">
-                    <div class="showtimes-row ">
-                        <div class="p-2">
-                            <img src="https://cdn.galaxycine.vn/media/2023/3/9/demon-slayer-4_1678344779186.jpg"
-                                class="mt-3">
-                            <i class="icon-c13 mt-3 ms-2"></i>
-                            <div class="title-movie mt-3">
-                                <p class="">Demon Slayer: To The Swordsmith Village</p>
-                                <p class="vn">Thanh Gươm Diệt Quỷ: Đường Đến Làng Rèn Gươm</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="border">
-                <a href="#">
-                    <div class="showtimes-row">
-                        <div class="p-2">
-                            <img src="https://cdn.galaxycine.vn/media/2023/3/9/demon-slayer-4_1678344779186.jpg"
-                                class="mt-3">
-                            <i class="icon-c13 mt-3 ms-2"></i>
-                            <div class="title-movie mt-3">
-                                <p class="">Demon Slayer: To The Swordsmith Village</p>
-                                <p class="vn">Thanh Gươm Diệt Quỷ: Đường Đến Làng Rèn Gươm</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
+                    </a>
+                </div>
+            {{/each}}
         </div>
 
         <div class="col-md-1"></div>
         <div class="col-lg-4 mb-2 p-0">
             <div class="tablist">CHỌN SUẤT</div>
-            <div class="border">
-                <div class="select p-2 mb-5">
-                    <div class="mb-3">Thứ năm, 23/03/2023</div>
-                    <div class="me-3 float-start">2D - Phụ đề</div>
-                    <a href="#" class="border p-1">12:00</a>
-                    <a href="#" class="border p-1">12:00</a>
-                    <a href="#" class="border p-1">12:00</a>
+            {{#each calenders}}
+                <div class="border">
+                    <div class="select p-2 mb-5">
+                        <div class="mb-3">{{ngaychieu}}</div>
+                        <div class="me-3 float-start">2D - Phụ đề</div>
+                        {{#each giochieu}}
+                            <a href="#" class="border p-1">{{this}}</a>
+                        {{/each}}
+                    </div>
                 </div>
-            </div>
-            <div class="border">
-                <div class="select p-2 mb-5">
-                    <div class="mb-3">Thứ năm, 23/03/2023</div>
-                    <div class="me-3 float-start">2D - Phụ đề</div>
-                    <a href="#" class="border p-1">12:00</a>
-                    <a href="#" class="border p-1">12:00</a>
-                    <a href="#" class="border p-1">12:00</a>
-                </div>
-            </div>
-            <div class="border">
-                <div class="select p-2 mb-5">
-                    <div class="mb-3">Thứ năm, 23/03/2023</div>
-                    <div class="me-3 float-start">2D - Phụ đề</div>
-                    <a href="#" class="border p-1">12:00</a>
-                    <a href="#" class="border p-1">12:00</a>
-                    <a href="#" class="border p-1">12:00</a>
-                </div>
-            </div>
+            {{/each}}
         </div>
         <div class="col-md-2"></div>
     </div>
