--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarNav" style="justify-content: center;">
             <ul style="width: 80%; display: flex;" class="navbar-nav justify-content-around">
                 <li class="nav-item menu">
-                    <a class="nav-link active text-white" aria-current="page" href="#">MUA VÉ</a>
+                    <a class="nav-link active text-white" aria-current="page" href="mua-ve">MUA VÉ</a>
                 </li>
                 <li class="nav-item dropdown menu">
                     <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle=""
